# code-challenge-template

./: README.md
answers/: database.txt  deployment.txt
src/: .env.sample  DockerFile  config.py  docker-compose.py  pyproject.toml  run.py
src/app/: __init__.py
src/app/controllers/: weather_analytics_controller.py
src/app/models/: weather_data.py  weather_stats.py
src/app/routes/: weather.py
src/scripts/: db_weather_ingestor.py  test_db_weather_ingestor.py  test_weather_analytics_engine.py  weather_analytics_engine.py
src/tests/: test_weather.py  test_weather_analytics_controller.py
